--- a/index.html
+++ b/index.html
@@ -246,9 +246,21 @@
                 </div>
             </div>
         </div>
+        <div class="content fb-like">
+            <div class="fb-like-box content" data-href="https://www.facebook.com/pages/FbSpl/294280333951927" data-width="292" data-show-faces="false" data-stream="false" data-header="false"></div>
+        </div>
         <div id="footer">
             (c) 2012 - Eopin
         </div>
     </div>
+
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_GB/all.js#xfbml=1";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 </body>
 </html>
