Added a Fork me rubber

--- a/index.html
+++ b/index.html
@@ -247,13 +247,13 @@
             </div>
         </div>
         <div class="content fb-like">
-            <div class="fb-like-box content" data-href="https://www.facebook.com/pages/FbSpl/294280333951927" data-width="292" data-show-faces="false" data-stream="false" data-header="false"></div>
+            <div class="fb-like-box content" data-href="https://www.facebook.com/pages/FbSpl/294280333951927" data-width="480" data-show-faces="false" data-stream="false" data-header="false"></div>
         </div>
         <div id="footer">
             (c) 2012 - Eopin
         </div>
     </div>
-
+<a href="https://github.com/eopin/FbSpl"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
