rectified the text in div#install-button a span[html=chrome & firefox ...]

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div id="install-button">
             <h2 class="hide">Install</h2>
-            <a href="fbspl.user.js"><span>Install</span><span>Chrome &amp; Firefox (Firefox users must install</a>
+            <a href="fbspl.user.js"><span>Install</span><span>Chrome &amp; Firefox (Firefox users must install GreaseMonkey)</a>
         </div>
         <div id="emoticon-list">
             <h2>Emoticon list</h2>
