added OpenGraph date + Tumbnail for facebook

--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
     <title>FbSpl : SimpleFace emoticons for Facebook</title>
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="FbSpl : SimpleFace emoticons for Facebook" />
+    <meta property="og:image" content="assets/images/fb_thumbnail.png" />
+    <meta property="og:description" content="A one-step installation SimpleFace emoticon set for Facebook" />
+    <meta property="og:url" content="http://eopin.github.com/FbSpl">
+
 </head>
 <body>
     <div id="wrapper">
