--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta property="og:title" content="FbSpl : SimpleFace emoticons for Facebook" />
     <meta property="og:image" content="http://eopin.github.com/fbspl/assets/images/fb_thumbnail.png" />
     <meta property="og:description" content="A one-step installation SimpleFace emoticon set for Facebook" />
+    <meta property="og:url" content="http://eopin.github.com/fbspl/">
 
 </head>
 <body>
